@@ -83,4 +83,7 @@ RUN wget https://github.com/alexdobin/STAR/archive/2.5.1b.tar.gz \
 # ENV PATH bbmap:$PATH
 
 RUN cp /cellranger-3.0.2.9001/cellranger-cs/3.0.2.9001/lib/python/cellranger/chemistry.py /cellranger-3.0.2.9001/cellranger-cs/3.0.2.9001/lib/python/cellranger/check.py
- 
+
+RUN chmod -R +rw /cellranger-3.0.2.9001/*
+
+USER root
